# IronsiteHackathon

./: .env.example  .gitignore  ARKitScenes_Depth_Evals_README.md  CLAUDE.md  EVAL_QUICK_REFERENCE.md  EVAL_RESULTS.md  EVAL_SUMMARY.md  FINAL_EVAL_SUMMARY.md  FINAL_RESULTS.md  GPU_SERVER_INSTRUCTIONS.md  NYU_DISTANCE_EVAL.md  NYU_EVAL_RESULTS.md  QUICKSTART.md  README.md  SETUP_EVALS.md  TWO_HEAD_ARCHITECTURE.md  TWO_HEAD_MODEL.md  Technical.md  TemporalWorldRender.md  USAGE.md  api.py  app.py  coco_to_yolo_format.py  config-fast.yaml  config.yaml  evaluate.py  fine_tune_yolo.py  generate_3d_world.py  main.py  pipeline.py  pipeline_4d.py  pyproject.toml  requirements-gpu.txt  requirements.txt  run_full_benchmark_gpu.sh  test_vlm_setup.py  train_yolo_nyu.sh
.claude/: settings.local.json
Bricks.coco/: README.roboflow.txt
Bricks.coco/train/: _annotations.coco.json
Bricks.v1i.coco/: README.roboflow.txt
Bricks.v1i.coco/test/: _annotations.coco.json
Bricks.v1i.coco/train/: _annotations.coco.json
Bricks.v1i.coco/valid/: _annotations.coco.json
Bricks.v1i.yolo26/: README.roboflow.txt  data.yaml
Bricks.yolo/: data.yaml
OUTLET.coco/: README.roboflow.txt
OUTLET.coco/train/: _annotations.coco.json
OUTLET.v1i.coco/: README.roboflow.txt
OUTLET.v1i.coco.balanced/test/: _annotations.coco.json
OUTLET.v1i.coco.balanced/train/: _annotations.coco.json
OUTLET.v1i.coco.balanced/valid/: _annotations.coco.json
OUTLET.v1i.coco/test/: _annotations.coco.json
OUTLET.v1i.coco/train/: _annotations.coco.json
OUTLET.v1i.coco/valid/: _annotations.coco.json
OUTLET.v1i.yolo26/: README.roboflow.txt  data.yaml
Outlet.yolo/: data.yaml
app/: index.html  main.js
cmu_blocks.v1i.yolo26/: README.roboflow.txt  data.yaml
data/processed/: frames.csv  (+1 more)
eval/: metrics.py
frontend/: package-lock.json  vite.config.ts
models/: anchor_detection.py  depth_estimator.py  spatial_calibration.py
ollama/: test-image_vlm_anchors.json
precheck-vision/: index.html  tailwind.config.ts
scripts/: balance_outlet_dataset.py  chat.py  convert_arkitscenes_to_benchmark.py  create_test_data.py  download_arkit_minimal.py  download_arkitscenes.py  download_arkitscenes_data.sh  download_arkitscenes_minimal.sh  extract_frames.py  finetune_gdino.py  overlay_video.py  process_videos.py  run_batch.py  select_hero_frames.py  test_anthropic_models.py  test_yolo.py  yolo_video.py
src/: llm.py  prompts.py  utils.py
train/: finetune_perception.py  finetune_yolo_nyu.py
(+13182 files in other folders)
