[project]
name = "precheck"
version = "0.1.0"
description = "Spatial anchor calibration for automated construction inspection"
requires-python = ">=3.11"

dependencies = [
    # Core
    "numpy",
    "Pillow",
    "opencv-python",
    "python-dotenv",
    # Anchor detection + depth estimation (GroundingDINO via transformers)
    "torch",
    "torchvision",
    # Depth estimation
    "transformers",
    "timm",
    # VLM clients
    "anthropic",
    "openai",
    # Demo
    "streamlit",
    "plotly",
    "matplotlib",
    # Utils
    "scipy",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
