[project]
name = "precheck"
version = "0.1.0"
description = "Spatial anchor calibration for automated construction inspection"
requires-python = ">=3.11"

dependencies = [
    # Core
    "numpy",
    "Pillow",
    "opencv-python",
    "python-dotenv",
    # Anchor detection + depth estimation (GroundingDINO via transformers)
    "torch",
    "torchvision",
    # Depth estimation
    "transformers",
    "timm",
    # VLM clients
    "anthropic",
    "openai",
    # Demo
    "streamlit",
    "plotly",
    "matplotlib",
    # Utils
    "scipy",
    "scikit-learn",
    "tqdm",
    "einops>=0.8.2",
    "ultralytics>=8.4.14",
    "fastapi>=0.129.2",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
